코드의 구조 개선 : 기존 칵테일 도메인 & 엔티티 상태에서 도메인 엔티티로 전환